# sdk-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  dodo.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  test.py  test_e2e.py
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
.hooks/: pre-commit
lemon/: __init__.py  api.py  base.py  config.py  errors.py  helpers.py  types.py
lemon/market_data/: api.py  instruments.py  live_streaming.py  ohlc.py  quotes.py  trades.py  venues.py
lemon/market_data/instruments/: api.py  models.py
lemon/market_data/model/: __init__.py  instrument.py  live_streaming.py  ohlc.py  quote.py  trade.py  venue.py
lemon/market_data/ohlc/: api.py  models.py
lemon/market_data/quotes/: api.py  models.py
lemon/market_data/trades/: api.py  models.py
lemon/market_data/venues/: api.py  errors.py  models.py
lemon/streaming/: api.py  authenticate.py
lemon/streaming/model/: __init__.py  authenticate.py
lemon/trading/: account.py  api.py  orders.py  positions.py  user.py
lemon/trading/account/: api.py  models.py
lemon/trading/model/: __init__.py  account.py  order.py  position.py  user.py
lemon/trading/orders/: api.py  models.py
lemon/trading/positions/: api.py  models.py
lemon/trading/user/: api.py  models.py
scripts/: format.sh  lint.sh
tests/: conftest.py  test_e2e.py  test_version.py
tests/market_data/: conftest.py  test_instruments.py  test_ohlc.py  test_quotes.py  test_trades.py  test_venues.py
tests/market_data/model/: test_instrument.py  test_ohlc.py  test_quote.py  test_trade.py  test_venue.py
tests/streaming/: conftest.py  test_authenticate.py
tests/streaming/model/: test_authenticate.py
tests/trading/: conftest.py  test_account.py  test_orders.py  test_positions.py  test_user.py
tests/trading/model/: test_account.py  test_orders.py  test_position.py  test_user.py
