[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lemon"
authors = [{ name = "lemon.markets", email = "support@lemon.markets" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version", "description"]
requires-python = ">=3.7,<4"

dependencies = [
    "pytz>=2022.1",
    "requests>=2.27.1",
    "typing-extensions>=4.2.0",
    "urllib3>=1.26.0,<2",
]

[project.optional-dependencies]

test = [
    "pytest",
    "pytest-cov",
    "pytest_httpserver"
]

dev = [
    'autoflake',
    'black',
    'isort',
    'mypy',
    'mypy-extensions',
    'pylint',
    'types-requests',
    'types-pytz',
]

[project.urls]
Home = "https://www.lemon.markets/"
Source = "https://github.com/lemon-markets/sdk-python/"
Documentation = "https://docs.lemon.markets/"
Download = "https://pypi.python.org/pypi/lemon/"
Changes = "https://github.com/lemon-markets/sdk-python/blob/master/CHANGELOG.md"
Tracker = "https://github.com/lemon-markets/sdk-python/issues/"

[tool.flit.sdist]
exclude = ["tests/*"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
allow_untyped_calls = true

[tool.pylint.MASTER]
disable=[
    "C0103", # invalid-name
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0801", # duplicate-code
    "R0902", # too-many-instance-attributes
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "W0212", # protected-access
    "W0621", # redefined-outer-name
    "W0622", # redefined-builtin
]

[tool.coverage.report]
show_missing=true


[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as e2e"
]

[tool.isort]
profile = 'black'